# agent-orchestrator

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: audit.example.yaml  routing.json
data/evaluation/: tasks-example.yaml
docs/: DESIGN-PRINCIPLES.md
examples/: README.md
examples/example-run-frontier/: judge-scores.json
examples/example-run-oss/: judge-batch.json  judge-scores.json
schemas/: routing.schema.json
scripts/: scrub_check.sh
src/orchestrator/: __init__.py  judge_adapter.py
src/orchestrator/audit/: README.md  __init__.py  __main__.py  cli.py  config.py  correctness.py  effects.py  quality.py  report.py
src/orchestrator/evaluation/: README.md  __init__.py  __main__.py  batch.py  cli.py  integrity.py  report.py  runner.py  scoring.py  tasks.py
src/orchestrator/improve/: __init__.py  cli.py  guard.py  loop_a_mistakes.py  loop_b_models.py  loop_c_research.py  state.py
src/orchestrator/onboarding/: __init__.py  __main__.py  cli.py  scaffold.py  scanner.py
src/orchestrator/onboarding/templates/: orchestration-plan.template.md
src/orchestrator/telemetry/: __init__.py  db.py  schema.sql
src/orchestrator/tiered/: __init__.py  __main__.py  cli.py  dry_run.py  routing_table.py
tests/: test_judge_adapter.py  test_routing_schema.py  test_telemetry_db.py
tests/audit/: conftest.py  test_cli.py  test_config.py  test_correctness.py  test_correctness_completeness.py  test_effects.py  test_quality.py  test_report.py
tests/evaluation/: test_batch.py  test_cli.py  test_integrity.py  test_report.py  test_runner_helpers.py  test_scoring.py  test_tasks.py
tests/improve/: test_cli.py  test_loops.py
tests/onboarding/: test_cli.py  test_scaffold.py  test_scanner.py
tests/tiered/: test_tiered.py
